# ecofun-backend

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
alembic/: env.py
app/: api.py  constants.py  database.py  helpers.py  models.py  responses.py  schemas.py
app/routes/: marketplaces.py  users.py
tests/: test_database.py
