[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yryskeldi Azamatov <azamatov0202@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
httpx = "^0.27.0"
pydantic = "^2.7.4"
google-generativeai = "^0.6.0"
pillow = "^10.3.0"
ipython = "^8.25.0"
requests = "^2.32.3"
sqlalchemy = "1.3.23"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
pytest = "^8.2.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
